# dmac-aci

./: .gitignore  README.md
deployer/: .env.example  pyproject.toml
deployer/src/deployer/: cli.py  config.py  runner.py  settings.py  ui.py
deployer/tests/: test_config.py  test_runner.py  test_settings.py
docs/: deployer.md  fabric-object-names.md  how-it-works.md  naming-convention.md
tform/tenants/dev/: providers.tf  variables.tf
tform/tenants/prod/: 1-access-policies.tf  providers.tf  variables.tf
tform/tenants/prod/access-pols/: locals.tf  main.tf  nsxt.tf  providers.tf  variables.tf
tform/tenants/prod/tenant-pols/: locals.tf  main.tf  nsxt.tf  providers.tf  sources.tf
